# ngl_server

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  build.bat  close  cmake.bat  conanfile.py  conanfile.txt
public/: CMakeLists.txt  define.h
public/actor/actor_base/: actor.cpp  actor.h  actor_address.cpp  actor_address.h  actor_base.cpp  actor_base.h  actor_base_create.cpp  actor_client.cpp  actor_client.h  actor_create.cpp  actor_create.h  actor_db.cpp  actor_db.h  actor_db_client.cpp  actor_db_client.h  actor_define.h  actor_enum.cpp  actor_enum.h  actor_guid.cpp  actor_guid.h  actor_manage.cpp  actor_manage.h  actor_protocol.h  actor_register.h  actor_reloadcsv.cpp  actor_reloadcsv.h  actor_rfun.cpp  actor_rfun.h  actor_roleitem.cpp  actor_roleitem.h  actor_server.cpp  actor_server.h  actor_switchprocess.cpp  actor_switchprocess.h  actor_thread.cpp  actor_thread.h  actor_timer.cpp  actor_timer.h  actor_type.cpp  actor_type.h  (+4 more)
public/actor/actor_logic/: client2game.cpp  game2client.cpp  gameclient_forward.cpp  gameclient_forward.h  gateway_game_forward.h
public/cpp/: CMakeLists.txt
public/cpp/actor/: auto_actor_enum.h  nactor_auto.cpp  nactor_auto.h  nprotocol.cpp  nprotocol.h  nprotocol_auto.h  nprotocol_c2g.cpp  nprotocol_g2c.cpp  nprotocol_template.h  pb_protocol.cpp  pbname_match.cpp  protocol.cpp  protocol.h  tprotocol.cpp  tprotocol.h
public/cpp/net/: asio_base.cpp  asio_base.h  asio_tcp.cpp  asio_timer.cpp  asio_timer.h  kkkkkkkkkkkkk.rar  manage_session.cpp  manage_session.h  net.cpp  net.h  net_pack.h  net_protocol.cpp  net_protocol.h  net_session.h  net_tcp.cpp  net_tcp.h  net_ws.cpp  net_ws.h  net_ws.rar  nnet.cpp  nnet.h  node_pack.h  ntcp.h  server_session.cpp  server_session.h
public/cpp/protocol/: csvtable.cpp  csvtable.h  init_protobuf.cpp  init_protobuf.h  initproto.cpp  initproto.h  tprotocol.cpp  tprotocol.h
public/cpp/tools/: arg_options.h  base64.cpp  base64.h  bit.cpp  bit.h  cache_list.h  cmd.h  conversion.cpp  conversion.h  define.h  encryption.cpp  encryption.h  enum2name.h  events.h  hexbytes.cpp  hexbytes.h  impl.h  include3part.h  is_container.h  localtime.cpp  localtime.h  md5.cpp  md5.h  nconsume.cpp  nconsume.h  nconsuming.cpp  nconsuming.h  nfilterword.cpp  nfilterword.h  ngroup.h  nhash.cpp  nhash.h  nwork.h  operator_file.cpp  operator_file.h  pb_field.cpp  pb_field.h  pb_fieldnumber_copy.cpp  regular.cpp  regular.h  (+27 more)
public/csharp/: Program.cs
public/csharp/csharp/: csharp.sln  public.lnk
public/csharp/csv/: csv.cs  csvtable.cs  manage_csv.cs  operator_file.cs
public/net/: asio_base.h  asio_timer.cpp  net.h  net_config.h  net_protocol.cpp  net_protocol.h  net_server.h  net_tcp.cpp  net_tcp.h  net_ws.cpp  net_ws.h  netbuff_pool.h  netbuff_pool.rar  node_pack.h
public/net/tcp/: asio_tcp.cpp  asio_tcp.h  asio_ws.cpp  asio_ws.h
public/php/: SocketByte.php  config.php  readdb.php  serverls.php
public/php/ban/: get_roleban.php  get_roleban_html.php  roleban.php  roleban_html.php
public/php/db/: changedb.php  changedb_html.php
public/php/family/: changname_family.php  changname_family_html.php  get_family.php  get_family_html.php
public/php/mail/: add_mail.php  add_mail_html.php  del_mail.php  get_mail.php
public/php/notalk/: notalk.php  notalk_html.php
public/php/notice/: add_notice.php  del_notice.php  get_notice.php  get_notice_html.php
public/php/pay/: gmpay.php  pay_login.php
public/php/ranklist/: get_ranklist.php  get_ranklist_html.php
public/protocol/: csvtable.cpp  csvtable.h  init_protobuf.h  protocol_define.h
public/protocol/protobuf/: data.pb.cc  data.pb.h  db.pb.cc  db.pb.h  gm.pb.cc  gm.pb.h  init_protobuf.cpp  init_protobuf.h  net.pb.cc  net.pb.h
public/protocol/protocol/: protocol.cpp  protocol.h  protocoltools.cpp  protocoltools.h
public/serialize/: bytes_order.cpp  bytes_order.h  netbuff_pool.h  pack.cpp  pack.h  pack_head.cpp  pack_head.h  segpack.cpp  serialize.cpp  serialize.h  structbytes.h
public/tools/: base64.h  bit.cpp  bit.h  cache_list.h  conversion.cpp  encryption.cpp  encryption.h  enum2name.h  hexbytes.cpp  hexbytes.h  impl.h  md5.cpp  operator_file.cpp  operator_file.h  remakes.cpp  remakes.h  rfun.cpp  rfun.h  single_list.h  splite.h  threadtools.cpp  threadtools.h  time_wheel.cpp  time_wheel.h  tools.cpp  tools.h  type.h  url.cpp  url.h  uuid.cpp  uuid.h  varint.cpp  varint.h
public/tools/curl/: manage_curl.cpp  manage_curl.h
public/tools/dmp/: dumper.h  gdbdmp.cpp
public/tools/log/: logformat.h  logprintf.cpp  logprintf.h  logserialize.cpp  logserialize.h  nlog.cpp  nlog.h
public/tools/notify/: notify.h
public/tools/serialize/: bytes_order.h  segpack.cpp  segpack.h  serialize.h
server/: CMakeLists.txt  README.md  mi_new.cpp
server/core/: main.cpp
server/idl/: CMakeLists.txt
server/idl/core/: idl.cpp  idl.h  idlcpp_protocol.h  main.cpp  ub.cpp  ub.cpp.txt  ub.txt  ub_1.cpp  ub_2.cpp  ub_3.cpp
server/idl/idl/: conversion.cpp  idl.cpp  idl.h  idlcpp_protocol.h  localtime.h  main.cpp  operator_file.cpp  operator_file.h  ub.cpp
server/libmycorekkk/: CMakeLists.txt
server/libmycorekkk/core/: ub.cpp  ub.cpp.txt
server/libnglcore/: CMakeLists.txt
server/libnglcore/core/: init_dbdata.cpp  init_dbdata.h  init_server.cpp  init_server.h  runtime_helpers.h  server_main.cpp  server_main.h  server_test.cpp  start_actor.cpp  start_cross.cpp  start_cross.h  start_crossdb.cpp  start_crossdb.h  start_csvserver.cpp  start_csvserver.h  start_db.cpp  start_game.cpp  start_game.h  start_gateway.cpp  ub.txt  (+13 more)
server/makeproto/: CMakeLists.txt
server/node/: CMakeLists.txt
server/rebuild/: CMakeLists.txt
server/tests/: CMakeLists.txt  actor_manage_gtest.cpp  actor_role_gtest.cpp  ai_gtest.cpp  bootstrap_gtest.cpp  net_gtest.cpp  nfilterword_gtest.cpp  perf_gtest.cpp  runtime_gtest.cpp  runtime_helpers.h  runtime_test_support.h  serialize_gtest.cpp  smoke_gtest.cpp  socket_pool_gtest.cpp  startup_support.cpp  test_support.h  tools_gtest.cpp  ws_gtest.cpp  xml_sysconfig_gtest.cpp
server/tools/: CMakeLists.txt
(+1394 files in other folders)
