cmake_minimum_required(VERSION 2.6)

PROJECT (libmycore)
INCLUDE_DIRECTORIES(3part/mysql/include)

SET(PUBLIC_LIST ${PROJECT_SOURCE_DIR})
FILE(GLOB_RECURSE PUBLIC_LIST_INCLUDE ${PUBLIC_LIST}/*.h ) 
FILE(GLOB_RECURSE PUBLIC_LIST_SRC ${PUBLIC_LIST}/*.cpp) 
FILE(GLOB_RECURSE PUBLIC_LIST_CSRC ${PUBLIC_LIST}/*.c) 
SOURCE_GROUP("Header Files" FILES ${PUBLIC_LIST_INCLUDE})
SOURCE_GROUP("Source Files" FILES ${PUBLIC_LIST_SRC})
SOURCE_GROUP("Source Files" FILES ${PUBLIC_LIST_CSRC})



IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
ADD_LIBRARY(libmycore STATIC ${PUBLIC_LIST_INCLUDE} ${PUBLIC_LIST_SRC} ${PUBLIC_LIST_CSRC})
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")


IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
ADD_LIBRARY(mycore STATIC ${PUBLIC_LIST_INCLUDE} ${PUBLIC_LIST_SRC} ${PUBLIC_LIST_CSRC})
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")






