cmake_minimum_required(VERSION 2.6)

PROJECT (rebuild)

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")

ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
ADD_DEFINITIONS(-DBOOST_HAS_WINTHREADS)
ADD_DEFINITIONS(-DBOOST_THREAD_BUILD_DLL)

ADD_DEFINITIONS(-D WIN32_LEAN_AND_MEAN)

ADD_DEFINITIONS(-DSERVER_GATEWAY)

INCLUDE_DIRECTORIES(./core)
########################################################################################core
SET(CORE_LIST ${PROJECT_SOURCE_DIR}/core)
FILE(GLOB_RECURSE CORE_LIST_INCLUDE ${CORE_LIST}/*.h ) 
FILE(GLOB_RECURSE CORE_LIST_SRC ${CORE_LIST}/*.cpp) 
FILE(GLOB_RECURSE CORE_LIST_CSRC ${CORE_LIST}/*.c) 
SOURCE_GROUP("Header Files" FILES ${CORE_LIST_INCLUDE})
SOURCE_GROUP("Source Files" FILES ${CORE_LIST_SRC})
SOURCE_GROUP("Source Files" FILES ${CORE_LIST_CSRC})


ADD_EXECUTABLE(rebuild
${CORE_LIST_INCLUDE}
${CORE_LIST_SRC}
${CORE_LIST_CSRC}
)
#set_target_properties
SET_TARGET_PROPERTIES(rebuild PROPERTIES COMPILE_FLAGS "/EHa" )

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
TARGET_LINK_LIBRARIES(rebuild debug ${PROJECT_SOURCE_DIR}/../../lib/Debug/libboost.lib)
TARGET_LINK_LIBRARIES(rebuild optimized ${PROJECT_SOURCE_DIR}/../../lib/Release/libboost.lib)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")



